Breaking up streams from Channel into a Manifest