@@ -18,13 +18,10 @@ package org.wildfly.channel;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.wildfly.channel.ChannelMapper.CURRENT_SCHEMA_VERSION;
 
 import java.net.URL;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.regex.Pattern;
 
 import org.junit.jupiter.api.Test;
 
@@ -32,7 +29,11 @@ public class ChannelMapperTestCase {
 
     @Test
     public void testWriteReadChannel() throws Exception {
-        final Channel channel = new Channel("test_name", "test_desc", new Vendor("test_vendor_name", Vendor.Support.COMMUNITY), Collections.emptyList(), Collections.emptyList());
+        final Channel channel = new Channel("test_name", "test_desc",
+                new Vendor("test_vendor_name", Vendor.Support.COMMUNITY),
+                Collections.emptyList(),
+                List.of(new Repository("test", "https://test.org/repository")),
+                new ChannelManifestCoordinate("test.channels", "channel"));
         final String yaml = ChannelMapper.toYaml(channel);
 
         final Channel channel1 = ChannelMapper.fromString(yaml).get(0);
@@ -42,10 +43,14 @@ public class ChannelMapperTestCase {
     @Test
     public void testWriteMultipleChannels() throws Exception {
         final ChannelRequirement req = new ChannelRequirement("org", "foo", "1.2.3");
-        final Stream stream1 = new Stream("org.bar", "example", "1.2.3");
-        final Stream stream2 = new Stream("org.bar", "other-example", Pattern.compile("\\.*"));
-        final Channel channel1 = new Channel("test_name_1", "test_desc", new Vendor("test_vendor_name", Vendor.Support.COMMUNITY), Arrays.asList(req), Arrays.asList(stream1, stream2));
-        final Channel channel2 = new Channel("test_name_2", "test_desc", new Vendor("test_vendor_name", Vendor.Support.COMMUNITY), Collections.emptyList(), Collections.emptyList());
+        final Channel channel1 = new Channel("test_name_1", "test_desc", new Vendor("test_vendor_name", Vendor.Support.COMMUNITY),
+                List.of(req),
+                List.of(new Repository("test", "https://test.org/repository")),
+                new ChannelManifestCoordinate("test.channels", "channel"));
+        final Channel channel2 = new Channel("test_name_2", "test_desc", new Vendor("test_vendor_name", Vendor.Support.COMMUNITY),
+                Collections.emptyList(),
+                List.of(new Repository("test", "https://test.org/repository")),
+                new ChannelManifestCoordinate(new URL("http://test.channels/channels")));
         final String yaml = ChannelMapper.toYaml(channel1, channel2);
 
         System.out.println(yaml);
